--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,9 @@ title: An awesome static site
 email: trietdat@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   This is an example of a great static sites built in Jekyll.
-baseurl: "blog-dbanh" # the subpath of your site, e.g. /blog
-url: "https://wwww.awesomestaticsites.com" # the base hostname & protocol for your site, e.g. http://example.com
+# baseurl: "/blog-dbanh" # the subpath of your site, e.g. /blog
+baseurl: ""
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: dbanh
 github_username:  dbanh
 
